--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,9 +1,4 @@
-<% if !flash[:notice].blank? %>
-  <div class ="notice">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
-
+<% @page_title = "Sections" %>
 <div class="sections index">
   <h2>Sections</h2>
 
@@ -24,7 +19,7 @@
       <td><%= section.page_id %></td>
       <td><%= section.name %></td>
       <td><%= section.content_type %></td>
-      <td class="center"><%= section.visible ? 'Yes' : 'No' %></td>
+      <td class="center"><%= status_tag(section.visible) %></td>
       <td class="actions">
         <%= link_to("Show", {:action => 'show', :id => section.id}, :class => 'action show') %>
         <%= link_to("Edit", {:action => 'edit', :id => section.id} , :class => 'action edit') %>
