--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -5,3 +5,10 @@
 <%= link_to('Hello page 2', {:action => 'hello'}) %><br />
 
 <%= link_to('Hello with parameters', {:action => 'hello', :page => 5, :id => 20}) %><br />
+
+<br />
+<% name = "Josh" %>
+
+<%= link_to('Roar', '#', :onclick => "jsRoar('#{j(name)}'); return true;") %>
+
+<%= javascript_tag("jsRoar('#{j(name)}');") %>
